resources/dsaas-stg/dsaas-preview/osoproxy-preview.route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    service: f8osoproxy
  name: osoproxy-preview
spec:
  host: osoproxy.prod-preview.openshift.io
  port:
    targetPort: http
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: f8osoproxy
    weight: 100
  wildcardPolicy: None
